use psycopg2-binary instead of psycopg2
> psycopg2/__init__.py:144: UserWarning: The psycopg2 wheel package will be renamed from release 2.8; in order to
> keep installing from binary please use "pip install psycopg2-binary" instead. For details see:
> <http://initd.org/psycopg/docs/install.html#binary-install-from-pypi>.

I'm switching the package name so that we *stay* on the binary package when it disappears in 2.8 (we're on 2.7 now).
But because of the possible concurrency problems in the binary package, we should consider installing the source
package in the future.

--- a/requirements.in
+++ b/requirements.in
@@ -36,7 +36,7 @@ commonmarkextensions # BSD 3
 
 # Only needed in common production deployment configurations
 uwsgi # GPL2
-psycopg2 # LGPL
+psycopg2-binary # LGPL
 mysqlclient # GPL
 rfc5424-logging-handler # BSD License
 
