back to main line release of django-notifications-hq at 1.4
This reverts commits 0118b535b66da9720a628de021a07fb1c9bd777c and 4006f37561fcfc526753bc6b2b8412648b4d898a, which switched to a fork of django-notifications-hq that was Django 2.0 compatible. Now that 1.4 is released with Django 2.0 compatibility, use that.

--- a/requirements.in
+++ b/requirements.in
@@ -20,7 +20,7 @@ Django<2.1 # BSD License
 django-debug-toolbar # BSD License
 django-allauth # MIT License
 django-bootstrap3 # Apache License 2.0
-django-notifications-hq==1.3 # MIT License -- see requirements_txt_updater.sh that has a patch to use a Github release
+django-notifications-hq==1.4 # MIT License
 jsonfield # MIT License
 dj_database_url # BSD License
 whitenoise # MIT License
