--- a/requirements.in
+++ b/requirements.in
@@ -14,6 +14,7 @@ fs # BSD License
 PyGithub # LGPL License
 GitPython # BSD License
 Pygments==2.2.0 # BSD License
+termcolor # MIT License
 
 # Common Django Packages
 Django<2.1 # BSD License
