--- a/requirements.txt
+++ b/requirements.txt
@@ -5,10 +5,10 @@ appdirs==1.4.3 \
 bandit==1.4.0 \
     --hash=sha256:cb977045497f83ec3a02616973ab845c829cdab8144ce2e757fe031104a9abd4 \
     --hash=sha256:de4cc19d6ba32d6f542c6a1ddadb4404571347d83ef1ed1e7afb7d0b38e0c25b
-beautifulsoup4==4.6.0 \
-    --hash=sha256:11a9a27b7d3bddc6d86f59fb76afb70e921a25ac2d6cc55b40d072bd68435a76 \
-    --hash=sha256:7015e76bf32f1f574636c4288399a6de66ce08fb7b2457f628a8d70c0fbabb11 \
-    --hash=sha256:808b6ac932dccb0a4126558f7dfdcf41710dd44a4ef497a0bb59a77f9f078e89 \
+beautifulsoup4==4.6.1 \
+    --hash=sha256:272081ad78c5495ba67083a0e50920163701fa6fe67fbb5eefeb21b5dd88c40b \
+    --hash=sha256:5a3d659840960a4107047b6328d6d4cdaaee69939bf11adc07466a1856c99a80 \
+    --hash=sha256:bd43a3b26d2886acd63070c43da821b60dea603eb6d45bab0294aac6129adbfa \
     # via pynliner
 certifi==2018.4.16 \
     --hash=sha256:13e698f54293db9f89122b0581843a782ad0934a4fe0172d2a980ba77fc61bb7 \
@@ -91,9 +91,9 @@ django-model-utils==3.1.2 \
     # via django-notifications-hq
 django-notifications-hq==1.4 \
     --hash=sha256:bbf1fbc7c7accfe79c1cf2da5fde96cd3e27e22d27108e6f368a91b26ef75450
-django==2.0.7 \
-    --hash=sha256:97886b8a13bbc33bfeba2ff133035d3eca014e2309dff2b6da0bdfc0b8656613 \
-    --hash=sha256:e900b73beee8977c7b887d90c6c57d68af10066b9dac898e1eaf0f82313de334
+django==2.0.8 \
+    --hash=sha256:0c5b65847d00845ee404bbc0b4a85686f15eb3001ffddda3db4e9baa265bf136 \
+    --hash=sha256:68aeea369a8130259354b6ba1fa9babe0c5ee6bced505dea4afcd00f765ae38b
 dnspython==1.15.0 \
     --hash=sha256:40f563e1f7a7b80dc5a4e76ad75c23da53d62f1e15e6e517293b04e1f84ead7c \
     --hash=sha256:861e6e58faa730f9845aaaa9c6c832851fbf89382ac52915a51f89c71accdd31 \
@@ -116,9 +116,9 @@ filemagic==1.6 \
     # via django-database-storage-backend
 fpdf2==2.0.0 \
     --hash=sha256:59be721cf9205d8ff2fe3587acb5fd7ec32252fbd46f3f311bd1369eed0ceec7
-fs==2.0.24 \
-    --hash=sha256:4dbec545acd662e7495d8bfe4bb6ebd8168e162098e9d0e6a0da96f941742e2c \
-    --hash=sha256:8569e61fa3646de95d4e2443f6dbe8310411ea0c609d6066e05f789cfe8f432a
+fs==2.0.27 \
+    --hash=sha256:31f684435514bff9e9c8a6eb99a0ce201492cd4b4ffa7f6c13162defba0582ad \
+    --hash=sha256:3c0fe6ee4e0889453d43bf644a5fc0dbb774cea878c6f30b2c3ed8d22ce9859c
 future==0.16.0 \
     --hash=sha256:e39ced1ab767b5936646cedba8bcce582398233d6a627067d4c6a454c90cfedb \
     # via commonmark
@@ -166,8 +166,9 @@ packaging==17.1 \
     --hash=sha256:e9215d2d2535d3ae866c3d6efc77d5b24a0192cce0ff20e42896cc0664f889c0 \
     --hash=sha256:f019b770dd64e585a99714f1fd5e01c7a8f11b45635aa953fd41c689a657375b \
     # via dparse, safety
-pbr==4.1.1 \
-    --hash=sha256:c6bddbad814f23c7faaf88d8a186e9965243cc6206a23361b73023648e645794 \
+pbr==4.2.0 \
+    --hash=sha256:1b8be50d938c9bb75d0eaf7eda111eec1bf6dc88a62a6412e33bf077457e0f45 \
+    --hash=sha256:b486975c0cafb6beeb50ca0e17ba047647f229087bd74e37f4a7e2cac17d2caa \
     # via stevedore
 pillow==5.2.0 \
     --hash=sha256:00def5b638994f888d1058e4d17c86dec8e1113c3741a0a8a659039aec59a83a \
@@ -285,12 +286,12 @@ rfc5424-logging-handler==1.1.2 \
     --hash=sha256:a78a0a42b19e44215cd8a5be4ab42bfd3593c0c30a9cbfde9478e398f502ea00
 rtyaml==0.0.4 \
     --hash=sha256:a49c65d65944560a6ae9c746e53d6ce68206d390bf5fa53d0a2510f34cd0d2f1
-safety==1.8.2 \
-    --hash=sha256:32d41b8bbd736db749aa2162de6c0bb11c2113c7bc0357476491f96cd5d58299 \
-    --hash=sha256:34227360409ffb1bc2657e5b6ff3472a32d72b917617cd3d2914ddf078c263b9
-selenium==3.13.0 \
-    --hash=sha256:6f4c7727d44034b8d635d7cf1c3377f76efc95e192ed5cfb97e0057fe5a92d44 \
-    --hash=sha256:f35bb209cab740c195276a323c1b750dbcfdb9f6983e7d6e3abba9cd8838f355
+safety==1.8.4 \
+    --hash=sha256:399511524f47230d5867f1eb75548f9feefb7a2711a4985cb5be0e034f87040f \
+    --hash=sha256:69b970918324865dcd7b92337e07152a0ea1ceecaf92f4d3b38529ee0ca83441
+selenium==3.14.0 \
+    --hash=sha256:c53d13a2627d835fee3d1d6291214c62196dfeb6f5f35572bacf31ac60c030c0 \
+    --hash=sha256:f9ca21919b564a0a86012cd2177923e3a7f37c4a574207086e710192452a7c40
 six==1.11.0 \
     --hash=sha256:70e8a77beed4562e7f14fe23a786b54f6296e34344c23bc42f07b15018ff98e9 \
     --hash=sha256:832dc0e10feb1aa2c68dcc57dbb658f1c7e65b9b61af69048abc87a2db00a0eb \
@@ -320,7 +321,7 @@ tzlocal==1.5.1 \
 urllib3==1.23 \
     --hash=sha256:a68ac5e15e76e7e5dd2b8f94007233e01effe3e50e8daddf69acfd81cb686baf \
     --hash=sha256:b5725a0bd4ba422ab0e66e89e030c806576753ea3ee08554382c14e685d117b5 \
-    # via requests
+    # via requests, selenium
 uwsgi==2.0.17.1 \
     --hash=sha256:d2318235c74665a60021a4fc7770e9c2756f9fc07de7b8c22805efe85b5ab277
 webencodings==0.5.1 \
