--- a/requirements.in
+++ b/requirements.in
@@ -15,6 +15,7 @@ PyGithub # LGPL License
 GitPython # BSD License
 Pygments==2.2.0 # BSD License
 termcolor # MIT License
+pyhash # Apache License 2.0
 
 # Common Django Packages
 Django<2.1 # BSD License
