update to commonmark 0.8.0 which changed the package name from CommonMark to commonmark, and bump some of our other projects that neede to be updated for the same reason

--- a/requirements.in
+++ b/requirements.in
@@ -8,7 +8,7 @@ Jinja2 # BSD License
 
 # Less Common Python Packages
 html5lib # MIT License
-CommonMark # BSD License
+commonmark # BSD License
 graphviz # MIT License
 fs # BSD License
 PyGithub # LGPL License
