--- a/requirements.in
+++ b/requirements.in
@@ -52,3 +52,9 @@ fpdf2 # LGPLv3+
 
 # Documentation only
 m2r # MIT License
+
+# Temporarily pinned.
+
+# markupsafe is pinned here because tests crash with version 1.1.0.
+# Can probably unpin when https://github.com/pallets/markupsafe/issues/108 is resolved.
+markupsafe==1.0 # BSD 3.
