--- a/deployment/docker-compose-nginx/nginx/Dockerfile
+++ b/deployment/docker-compose-nginx/nginx/Dockerfile
@@ -1,3 +1,7 @@
 FROM nginx:alpine
 
 COPY nginx.conf /etc/nginx/nginx.conf
+
+COPY cert.pem /etc/pki/tls/certs/cert.pem
+COPY key.pem /etc/pki/tls/private/key.pem
+
