--- a/deployment/docker-compose-nginx/nginx/nginx.conf
+++ b/deployment/docker-compose-nginx/nginx/nginx.conf
@@ -11,6 +11,25 @@ http {
     }
 
     server {
+        listen              443 ssl;
+        server_name         test.example.com;
+        ssl_certificate     /etc/pki/tls/certs/cert.pem;
+        ssl_certificate_key /etc/pki/tls/private/key.pem;
+        ssl_protocols       TLSv1 TLSv1.1 TLSv1.2;
+        ssl_ciphers         HIGH:!aNULL:!MD5;
+
+        location / {
+            proxy_pass         http://govready-q-upstream;
+            proxy_redirect     off;
+            proxy_set_header   Host $http_host;
+            proxy_set_header   X-Forwarded-Proto $scheme;
+            proxy_set_header   X-Real-IP $remote_addr;
+            proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header   X-Forwarded-Host $server_name;
+        }
+    }
+
+    server {
         listen 80;
 
         location / {
