--- a/deployment/docker-compose-nginx/nginx/nginx.conf
+++ b/deployment/docker-compose-nginx/nginx/nginx.conf
@@ -30,16 +30,10 @@ http {
     }
 
     server {
-        listen 80;
-
-        location / {
-            proxy_pass         http://govready-q-upstream;
-            proxy_redirect     off;
-            proxy_set_header   Host GovReady;
-            proxy_set_header   X-Real-IP $remote_addr;
-            proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header   X-Forwarded-Host $server_name;
-        }
+            listen       80 default_server;
+            listen       [::]:80 default_server;
+            server_name  _;
+            return       301 https://$host$request_uri;
     }
 
 }
