Add a way to start assessments from command
This is a bit rough, and the code should be tidied up a bit.
I wasn't originally planning on doing a web-based version of this,
or at least I wasn't going to add it to the main branch,
but *this* part seems to be a bit fiddly/delicate when done via code.

--- a/requirements.in
+++ b/requirements.in
@@ -48,6 +48,7 @@ coverage # Apache License 2.0
 selenium # Apache License 2.0
 safety # MIT License
 fpdf2 # LGPLv3+	
+parsel # BSD License
 
 # Documentation only
 m2r # MIT License
