`HOST`, `PORT` container env vars renamed `GR_HOST`, `GR_PORT`
Modifications to container deployment environmental variables to better
support deployments in Mesosphere and other Docker orchestration environments.

**WARNING - CONTAINER ENVIRONMENTAL VARIABLE CHANGES**

We are ONLY changing the OS level environmental variables used to pass values to containers.
We are not adjusting the `local/environment.json` variables.

The following strings were searched on globally to find needed changes:

`\bHOST\b`
`\bhost\b`

`\bPORT\b`
`\bport\b`

ignore patterns used to search:
-/codedata/code/govready-q-0.9.0-module-nav/venv/*,-/codedata/code/govready-q-0.9.0-module-nav/.scannerwork/*,-/codedata/code/govready-q-0.9.0-module-nav/local/*,-/codedata/code/govready-q-0.9.0-module-nav/docs/build/*

modified:   CHANGELOG.md
modified:   VERSION
modified:   deployment/docker-compose-nginx/docker-compose.yml
modified:   deployment/docker/docker_container_run.sh
modified:   deployment/docker/docker_machine_aws.sh
modified:   deployment/docker/dockerfile_exec.sh
new file:   deployment/mesosphere/marathon_sample_http.json
new file:   deployment/mesosphere/marathon_sample_http_annotated.json
modified:   docs/source/deploy_docker.md
modified:   siteapp/settings.py (comment only)

--- a/deployment/docker-compose-nginx/docker-compose.yml
+++ b/deployment/docker-compose-nginx/docker-compose.yml
@@ -6,8 +6,8 @@ services:
   govready-q:
     image: ${GOVREADY_Q_IMAGENAME-govready/govready-q}
     environment:
-      - HOST=${GOVREADY_Q_HOST-test.example.com}
-      - PORT=8000
+      - GR_HOST=${GOVREADY_Q_HOST-test.example.com}
+      - GR_PORT=8000
       - HTTPS=true
       - DBURL=${GOVREADY_Q_DBURL-}
     networks:
