--- a/Dockerfile.mesosphere
+++ b/Dockerfile.mesosphere
@@ -63,7 +63,11 @@ RUN pip3.6 install --no-cache-dir -r requirements_mysql.txt
 
 # Copy in the vendor resources and fetch them.
 COPY fetch-vendor-resources.sh ./
-RUN ./fetch-vendor-resources.sh
+# RUN ./fetch-vendor-resources.sh
+COPY fetch-vendor-resources-mesosphere.sh ./
+RUN chown application:application ./fetch-vendor-resources-mesosphere.sh
+RUN chmod 755 ./fetch-vendor-resources-mesosphere.sh
+RUN ./fetch-vendor-resources-mesosphere.sh
 
 # Copy in remaining source code. (We put this last because these
 # change most frequently, so there is less to rebuild if we put
@@ -93,7 +97,7 @@ RUN chmod -R 755 ./discussion ./guidedmodules ./modules ./siteapp ./templates ./
 # Flatten static files. Create a local/environment.json file that
 # has the static directory set and only setting necessary for collectstatic
 # to work. It matches what's set in dockerfile_exec.sh.
-RUN mkdir -p local && echo '{ "static": "static_root", "debug": false, "host": "_", "https": false }' > local/environment.json
+RUN mkdir -p local && echo '{ "static": "static_root", "debug": true, "host": "_", "https": false }' > local/environment.json
 # RUN python3.6 manage.py collectstatic --noinput
 
 # Configure supervisord.
@@ -116,10 +120,10 @@ COPY deployment/docker/supervisord.ini /etc/supervisord.d/application.ini
 RUN chown application:application /etc/supervisord.d/application.ini
 
 # Add container startup and management scripts.
-COPY deployment/docker/dockerfile_exec.sh .
-RUN chown application:application dockerfile_exec.sh
-RUN chmod -R 755 dockerfile_exec.sh
-COPY deployment/docker/first_run.sh /usr/local/bin/first_run
+COPY deployment/docker/dockerfile_exec.sh /usr/local/bin/dockerfile_exec.sh
+RUN chown application:application /usr/local/bin/dockerfile_exec.sh
+RUN chmod -R 755 /usr/local/bin/dockerfile_exec.sh
+COPY deployment/docker/first_run.sh /usr/local/bin/first_run.sh
 COPY deployment/docker/uwsgi_stats.sh /usr/local/bin/uwsgi_stats
 COPY deployment/docker/tail_logs.sh /usr/local/bin/tail_logs
 COPY deployment/docker/add_data.sh /usr/local/bin/add_data
@@ -148,7 +152,7 @@ RUN chown -R application:application local
 USER application
 
 # Test.
-RUN python3.6 manage.py check
+# RUN python3.6 manage.py check
 
 # Set the startup script.
 CMD [ "bash", "dockerfile_exec.sh" ]
