--- a/deployment/docker/supervisord.ini
+++ b/deployment/docker/supervisord.ini
@@ -1,5 +1,5 @@
 [program:application]
-command = uwsgi --ini /tmp/uwsgi.ini
+command = python3.6 manage.py runserver 0.0.0.0:8000
 directory = /usr/src/app
 stderr_logfile = /var/log/application-stderr.log
 stdout_logfile = /var/log/application-stdout.log
