use gunicorn instead of uwsgi

--- a/deployment/docker/supervisord.ini
+++ b/deployment/docker/supervisord.ini
@@ -1,5 +1,5 @@
 [program:application]
-command = uwsgi --ini /tmp/uwsgi.ini
+command = gunicorn --config /tmp/gunicorn.conf.py siteapp.wsgi
 directory = /usr/src/app
 stderr_logfile = /var/log/application-stderr.log
 stdout_logfile = /var/log/application-stdout.log
