Diagnostic 'health' pages plus changes to support SSO headers
* Replace uWSGI  with Green Unicorn (gunicorn) WSGI server for better SSO support and keep alive connections
* Add additional health pages for diagnostic
* Small refactorings of extra lines and comments that should have no impact

--- a/deployment/docker/supervisord.ini
+++ b/deployment/docker/supervisord.ini
@@ -1,11 +1,13 @@
 [program:application]
-command = python3.6 manage.py runserver 0.0.0.0:8000
+command = gunicorn --config /tmp/gunicorn.conf.py siteapp.wsgi
 directory = /usr/src/app
-stderr_logfile = /var/log/application-stderr.log
-stdout_logfile = /var/log/application-stdout.log
+logfile_maxbytes = 0
+stderr_logfile = /dev/stderr
+stdout_logfile = /dev/stdout
 
 [program:notificationemails]
 command = python3.6 manage.py send_notification_emails forever
 directory = /usr/src/app
-stderr_logfile = /var/log/notificationemails-stderr.log
-stdout_logfile = /var/log/notificationemails-stdout.log
+logfile_maxbytes = 0
+stderr_logfile = /dev/stderr
+stdout_logfile = /dev/stdout
