WIP Creating datagrid question type
Start to create datagrid question type by copying code
of multile-choice question type. Will eventually turn choices into
columns.

Add jsGrid to act as datagrid user interface.
Store answer data in database.

TODO:
- Clean up 'choice' language to more datagrid appropriate
- Add tests

--- a/fixtures/modules/other/simple_project/question_types_choice.yaml
+++ b/fixtures/modules/other/simple_project/question_types_choice.yaml
@@ -41,6 +41,22 @@ questions:
         text: Choice 3
         help: This is some help text for choice 3.
 
+  - id: q_datagrid
+    title: datagrid
+    prompt: Complete some.
+    type: datagrid
+    # TODO: test min, max
+    choices:
+      - key: choice1
+        text: Choice 1
+        help: This is some help text for choice 1.
+      - key: choice2
+        text: Choice 2
+        help: This is some help text for choice 2.
+      - key: choice3
+        text: Choice 3
+        help: This is some help text for choice 3.
+
 output:
   - title: Your Answers
     format: markdown
@@ -48,3 +64,4 @@ output:
       {{q_choice}}
       {{q_yesno}}
       {{q_multiple_choice}}
+      {{q_datagrid}}
