Use 'field' nomenclature for datagrid and not 'choice'
Having used the multiple-choice question type as a basis
of datagrid question, we now replace the 'choice' references
with the mor appropriate 'field' references and occassional
row reference.

modified:   CHANGELOG.md
modified:   VERSION
modified:   docs/source/Automation.md
modified:   docs/source/Schema.md
modified:   fixtures/modules/other/simple_project/question_types_choice.yaml
modified:   guidedmodules/answer_validation.py
modified:   guidedmodules/app_loading.py
modified:   guidedmodules/models.py
modified:   guidedmodules/module_logic.py
modified:   guidedmodules/tests.py
modified:   q-files/vendors/govready/govready-q-files-startpack/q-files/System-Description-Demo/system_basics_technical.yaml
modified:   siteapp/management/commands/test_screenshots.py
modified:   siteapp/tests.py
modified:   templates/authoring-tool-modal.html
modified:   templates/project-api.html
modified:   templates/question.html
modified:   testmocking/data_management.py

--- a/fixtures/modules/other/simple_project/question_types_choice.yaml
+++ b/fixtures/modules/other/simple_project/question_types_choice.yaml
@@ -46,16 +46,16 @@ questions:
     prompt: Complete some.
     type: datagrid
     # TODO: test min, max
-    choices:
-      - key: choice1
-        text: Choice 1
-        help: This is some help text for choice 1.
-      - key: choice2
-        text: Choice 2
-        help: This is some help text for choice 2.
-      - key: choice3
-        text: Choice 3
-        help: This is some help text for choice 3.
+    fields:
+      - key: field1
+        text: Field 1
+        help: This is some help text for field 1.
+      - key: field2
+        text: Field 2
+        help: This is some help text for field 2.
+      - key: field3
+        text: Field 3
+        help: This is some help text for field 3.
 
 output:
   - title: Your Answers
