Adding back "with"
Even though it's fine to end a sentence with a preposition, there are other alternatives that do not (I think they're both worse):
* With which team is your position most closely aligned?
* Your position is most closely aligned with which team?

--- a/modules/system/account/account_settings.yaml
+++ b/modules/system/account/account_settings.yaml
@@ -17,7 +17,7 @@ questions:
 
   - id: role
     title: Your Role
-    prompt: Which team is your position most closely aligned?
+    prompt: Which team is your position most closely aligned with?
     type: choice
     choices:
       - key: ceo_team
