Fixes for synchronizing with 0.9.0.dev (#807)
* Fixes for synchronizing with 0.9.0.dev

Remove organization reference from profile module
Fix issue with selecting review page
Synchronize siteapp/tests.py

* Adding back "with"

Even though it's fine to end a sentence with a preposition, there are other alternatives that do not (I think they're both worse):
* With which team is your position most closely aligned?
* Your position is most closely aligned with which team?

Co-authored-by: Greg Elin <greg.elin@govready.com>
Co-authored-by: Peter Kaminski <peter.kaminski@govready.com>

--- a/modules/system/account/account_settings.yaml
+++ b/modules/system/account/account_settings.yaml
@@ -17,7 +17,7 @@ questions:
 
   - id: role
     title: Your Role
-    prompt: Which team is your position at **{{organization}}** most closely aligned with?
+    prompt: Which team is your position most closely aligned with?
     type: choice
     choices:
       - key: ceo_team
@@ -44,7 +44,7 @@ questions:
 
   - id: title
     title: Your Title
-    prompt: What is your title at **{{organization}}**?
+    prompt: What is your title?
     type: text
 
   - id: picture
@@ -80,7 +80,7 @@ output:
       ![Your Picture]({{picture.url}})
       {% endif %}
 
-      {{name}}, {{title}}, is a member of the {{role.text}} at {{organization}}.
+      {{name}}, {{title}}, is a member of the {{role.text}}.
 
       ---
 
