--- a/requirements.in
+++ b/requirements.in
@@ -17,6 +17,9 @@ GitPython # BSD License
 Pygments==2.2.0 # BSD License
 termcolor # MIT License
 xxhash # BSD License
+importlib-metadata<2,>=0.12 # Apache License
+importlib-resources<2,>=1.0 # Apache License
+
 
 # Common Django Packages
 Django<2.2.11 # BSD License
