--- a/requirements.in
+++ b/requirements.in
@@ -22,7 +22,7 @@ importlib-resources<2,>=1.0 # Apache License
 
 
 # Common Django Packages
-Django<2.2.11 # BSD License
+Django==2.2.12 # BSD License
 django-debug-toolbar # BSD License
 django-allauth # MIT License
 django-bootstrap3 # Apache License 2.0
