--- a/fixtures/modules/other/simple_project/app.yaml
+++ b/fixtures/modules/other/simple_project/app.yaml
@@ -2,7 +2,21 @@ id: app
 type: project
 title: I want to answer some questions on Q.
 short_description: A simple project.
-
+version: 1.0.1
+catalog:
+  category: Testing
+  vendor: GovReady PBC
+  vendor_url: http://www.govready.com
+  status: published
+  version: 1.0.1
+  source_url: https://github.com/GovReady/GovReady-Q
+  description:
+    short: |
+      A simple pject used for testing
+introduction:
+  format: markdown
+  template: |
+    A simple pject used for testing
 questions:
 
   - id: simple_module
