--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,7 @@ version: 2
 jobs:
   build:
     docker:
-    - image: circleci/python:3.6-jessie-browsers # -slim tags work too but not with selenium
+    - image: circleci/python:3.7-stretch-browsers # when upgrading, check that it works with selenium
 
     steps:
     # Add .local/bin to PATH for utilities install by `pip install --user`.
