--- a/deployment/govready-wazuh/docker-compose.yml
+++ b/deployment/govready-wazuh/docker-compose.yml
@@ -1,12 +1,17 @@
 # GovReady App (C) 2020 GovReady PBC (License GPLv3)
 # Wazuh App Copyright (C) 2019 Wazuh Inc. (License GPLv2)
-version: '2'
+version: '3'
 
 services:
 # GovReady App (C) 2020 GovReady PBC (License GPLv3)
   govready-q:
-    image: govready/govready-q
     hostname: govready-q
+    image: ${GOVREADY_Q_IMAGENAME-govready/govready-q}
+    environment:
+      - HOST=${GOVREADY_Q_HOST-test.example.com}
+      - PORT=8000
+      - HTTPS=true
+      - DBURL=${GOVREADY_Q_DBURL-}
     restart: always
     ports:
       - "8000:8000"
@@ -42,7 +47,10 @@ services:
       memlock:
         soft: -1
         hard: -1
-    mem_limit: 2g
+    deploy:
+      resources:
+        limits:
+          memory: 2g
 
   kibana:
     image: wazuh/wazuh-kibana:3.9.5_7.2.1
