--- a/local-examples/local-ubuntu-postgres-nginx-gunicorn-supervisor-http/supervisor-govready-q.conf
+++ b/local-examples/local-ubuntu-postgres-nginx-gunicorn-supervisor-http/supervisor-govready-q.conf
@@ -1,11 +1,11 @@
-[program:application]
-command = gunicorn --config /home/govready-q/local/gunicorn.conf.py siteapp.wsgi
-directory = /usr/src/app
+[program:govready-q]
+command = gunicorn --config /home/govready-q/govready-q/local/gunicorn.conf.py siteapp.wsgi
+directory = /home/govready-q/govready-q
 stderr_logfile = /var/log/application-stderr.log
 stdout_logfile = /var/log/application-stdout.log
 
 [program:notificationemails]
 command = python3.6 manage.py send_notification_emails forever
-directory = /usr/src/app
+directory = /home/govready-q/govready-q
 stderr_logfile = /var/log/notificationemails-stderr.log
 stdout_logfile = /var/log/notificationemails-stdout.log
