--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,6 +30,8 @@ jobs:
             In both cases, package versions are pinned using version numbers and package hashes.
         command: |
             pip install --user -r requirements.txt
+            pip install --user -r requirements_mysql.txt
+            # pip install --user -r requirements_util.txt
             ./fetch-vendor-resources.sh
 
     # This is adapted from https://github.com/circleci/circleci-images/blob/master/shared/images/Dockerfile-browsers.template
