Include Xacta Excel Export (#903)
* Add export xlsx file in Xacta control format

* Update Ubuntu from source for 0.9.1.18

* Don't crash export on controls missing statements

* Fix poetry, importlib-metadata python 3.8 compabilility issue

Tests have been failing with error:
ERROR: poetry 1.0.5 has requirement importlib-metadata<1.2.0,>=1.1.3;
python_version < "3.8", but you'll have importlib-metadata 1.6.0 which is incompatible.

Adjusted version of importlib-metadata being installed.

* Fetch jquery library from Google, not code.jquery.com

code.jquery.com was causing curl SSL error, so switching to
google libraries as source for jquery.

* Remove unneeded render of a page...

...because we've already returned the excel file download.

Co-authored-by: Greg Elin <greg.elin@govready.com>

--- a/requirements.in
+++ b/requirements.in
@@ -66,4 +66,10 @@ sphinxcontrib-contentui # MIT License
 
 # markupsafe is pinned here because tests crash with version 1.1.0.
 # Can probably unpin when https://github.com/pallets/markupsafe/issues/108 is resolved.
-markupsafe==1.1.1 # BSD 3.
+markupsafe==1.1.1 # BSD 3
+
+# Excel exports
+openpyxl # MIT License
+
+# pin gevent to working version; we're getting Docker build errors with gevent==20.5.0
+gevent==1.4.0
