--- a/requirements.in
+++ b/requirements.in
@@ -19,7 +19,8 @@ termcolor # MIT License
 xxhash # BSD License
 importlib-metadata<2,>=0.12 # Apache License
 importlib-resources<2,>=1.0 # Apache License
-
+structlog # Apache
+colorama # BSD License
 
 # Common Django Packages
 Django==2.2.12 # BSD License
