Synch 0.9.1.22 various files...
install-govready-q.sh
requirements.in
requirements.txt
requirements_txt_checker_ignoreupdates.txt
siteapp/management/commands/first_run.py

--- a/requirements.in
+++ b/requirements.in
@@ -17,16 +17,16 @@ GitPython # BSD License
 Pygments==2.2.0 # BSD License
 termcolor # MIT License
 xxhash # BSD License
-importlib-metadata<2,>=0.12 # Apache License
+importlib-metadata<1.2,>=0.12 # Apache License
 importlib-resources<2,>=1.0 # Apache License
 
-
 # Common Django Packages
-Django==2.2.12 # BSD License
+# Django==2.2.12 # BSD License
+Django==3.0.7 # BSD License
 django-debug-toolbar # BSD License
 django-allauth # MIT License
 django-bootstrap3 # Apache License 2.0
-django-notifications-hq==1.4 # MIT License
+django-notifications-hq==1.6 # MIT License
 jsonfield # MIT License
 dj_database_url # BSD License
 whitenoise # MIT License
@@ -40,11 +40,14 @@ exclusiveprocess # CC0
 django-html-emailer # MIT License
 django-database-storage-backend # CC0, requires libmagic (libmagic1 in Debian)
 commonmarkextensions # BSD 3
+structlog # Apache License
 
 # Only needed in common production deployment configurations
 # uwsgi # GPL2 # Needed only if using uwsgi instead of gunicorn
 gunicorn # MIT License
-gevent # MIT License
+# Pin gevent to avoid Docker build errors with gevent==20.5.0
+# gevent==20.5.0 requires c compiler and build tools
+gevent==1.4.0 # MIT License
 psycopg2-binary # LGPL
 rfc5424-logging-handler # BSD License
 
@@ -63,7 +66,10 @@ sphinxcontrib-contentui # MIT License
 
 # markupsafe is pinned here because tests crash with version 1.1.0.
 # Can probably unpin when https://github.com/pallets/markupsafe/issues/108 is resolved.
-markupsafe==1.1.1 # BSD 3.
+markupsafe==1.1.1 # BSD 3
+
+# Excel exports
+openpyxl # MIT License
 
 # pin gevent to working version; we're getting Docker build errors with gevent==20.5.0
 gevent==1.4.0
