Simplify ports in Ubuntu NGINX https example

--- a/local-examples/local-ubuntu-postgres-nginx-gunicorn-supervisor-http/nginx-govready-q-https.conf
+++ b/local-examples/local-ubuntu-postgres-nginx-gunicorn-supervisor-http/nginx-govready-q-https.conf
@@ -1,13 +1,15 @@
   # Redirect HTTP port 80 requests to HTTPS port 443
   server {
-    listen [::]:80;
+    # listen [::]:80;
+    listen 80;
     server_name example.com;
     return 301 https://example.com;
   }
 
   server {
 
-    listen [::]:443 ssl;
+    # listen [::]:443 ssl;
+    listen 443 ssl;
 
     server_name example.com;
 
